# machine_factor_technologies_test_task

./: README.md
task_1/: .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_task_1_1.py  run_task_1_2.py  task_1_1.py  task_1_2.py
task_1/src/: task_1_1.py  task_1_2.py
task_1/src/conf/: logger.py  settings.py
task_1/src/db/: config.py  models.py
task_1/src/db/migrations/: env.py
task_1/src/db/migrations/versions/: 2022_12_01_22_52_545290734080_add_bars_1_bars_2_and_error_log_tables.py  2022_12_01_23_27_0603dd2061f7_populate_bars_1_and_bars_2_with_data.py
task_1/src/scripts/: cron-docker-entrypoint.sh
task_2/: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
task_2/parquet_web_socket/: __init__.py  app.py  data_iterator.py  settings.py  utils.py
task_2/parquet_web_socket/api/: base.py  ws.py
task_2/parquet_web_socket/tests/: conftest.py  test_data_iterator.py  test_ws.py
