[tool.poetry]
name = "machine_factor_technologies_test_task"
version = "0.1.0"
description = "Machine Factor Technologies test task"
authors = ["andri1gryniv <andri1gryniv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.44"}
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
pydantic = "^1.10.2"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
sqlalchemy2-stubs = "^0.0.2-alpha.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
